[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "antifraude"
version = "0.0.1"
description = "Modelo para identifica\u00e7\u00e3o de fraudes"
authors = [
  { name = "wesley-ribeiro" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["antifraude"]
force_sort_within_sections = true
